@@ -2,6 +2,10 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - fix validation regex for the $anchor keyword
+          - unevaluatedItems and unevaluatedProperties keywords are now
+            applied after all other keywords in the applicator vocabulary
+            (true/false results are not affected, but the order of annotations
+            and errors will change)
 
 0.027     2021-05-15 18:13:21Z
           - fixed error strings used for failing "dependentRequired"
